# Rust-Learning

./: CARGO_WARNINGS_SUMMARY.md  Cargo.toml  Makefile  README.md
benches/: performance.rs
data/: README.md  users.db.json
docs/: CARGO_COMMANDS.md  CONCEPTS_EXPLANATION.md  ERROR_WARNING_GUIDE.md  HOW_TO_USE.md  README.md  REAL_WORLD_PROJECT_GUIDE.md  UPGRADE_SUMMARY_2025.md  WARNINGS_MANAGEMENT.md
examples/: README.md  database_example.rs  microservices_example.rs  real_world_cli.rs  web_api_example.rs
scripts/: check_all.sh  check_basics.sh  check_by_topic.sh  check_functions.sh  quality_check.sh  setup_hooks.sh
src/: lib.rs  main.rs
src/01_basics/: comments.rs  compound_types.rs  constants_shadowing.rs  data_types.rs  mod.rs  operators.rs  practice_basics.rs  type_conversion.rs  variables.rs
src/02_ownership/: borrowing.rs  mod.rs  ownership_basics.rs  practice_ownership.rs
src/03_structs_enums/: enums.rs  mod.rs  practice_structs_enums.rs  structs.rs
src/04_functions/: advanced_functions.rs  basic_functions.rs  closures.rs  control_flow.rs  mod.rs  practice_functions.rs  recursion.rs
src/05_modules/: basic_modules.rs  mod.rs  practice_modules.rs  reexporting.rs  use_statements.rs  visibility_privacy.rs
src/06_collections/: hashmaps.rs  mod.rs  other_collections.rs  practice_collections.rs  vectors.rs
src/07_error_handling/: mod.rs  panic_and_propagation.rs  practice_error_handling.rs  result_and_option.rs
src/08_generics/: generic_enums.rs  generic_functions.rs  generic_structs.rs  mod.rs  practice_generics.rs
src/09_traits/: basic_traits.rs  mod.rs  practice_traits.rs  standard_traits.rs  trait_bounds.rs  trait_objects.rs
src/10_lifetimes/: basic_lifetimes.rs  lifetime_elision.rs  mod.rs  practice_lifetimes.rs  static_lifetime.rs  struct_lifetimes.rs
src/11_async_await/: advanced_async.rs  basic_async.rs  channels.rs  custom_futures.rs  error_handling.rs  mod.rs
src/12_macros/: code_generation.rs  declarative_macros.rs  logging_macros.rs  macro_hygiene.rs  mod.rs  practice_macros.rs  testing_macros.rs
src/13_testing/: basic_testing.rs  calculator_testing.rs  mod.rs  performance_testing.rs  repository_testing.rs  user_testing.rs
src/14_unsafe_rust/: ffi.rs  inline_assembly.rs  mod.rs  raw_pointers.rs  union_transmute.rs  unsafe_functions.rs  unsafe_traits.rs
src/15_advanced_patterns/: builder_pattern.rs  command_pattern.rs  compile_time_computation.rs  factory_pattern.rs  mod.rs  newtype_pattern.rs  observer_pattern.rs  phantom_types.rs  practice_advanced_patterns.rs  state_pattern.rs  strategy_pattern.rs  type_state_pattern.rs  visitor_pattern.rs  zero_cost_abstractions.rs
src/16_concurrency/: mod.rs  practice_concurrency.rs
src/17_web_development/: middleware.rs  mod.rs  rest_api.rs  templating.rs  web_server.rs
src/18_networking/: mod.rs  tcp_server.rs  udp_communication.rs
src/19_performance/: cpu_optimization.rs  memory_optimization.rs  mod.rs  profiling.rs  profiling_benchmarking.rs  simd_vectorization.rs  zero_copy.rs
src/20_security/: authentication.rs  encryption.rs  hashing.rs  mod.rs
src/21_advanced_topics/: mod.rs  practice_advanced_topics.rs
src/22_machine_learning/: machine_learning.rs  mod.rs
src/23_blockchain/: blockchain.rs  mod.rs
src/24_database/: connection_pooling.rs  mod.rs  nosql_databases.rs  orm_examples.rs  sql_databases.rs
src/25_devops/: cicd_pipelines.rs  docker_deployment.rs  infrastructure_as_code.rs  mod.rs  monitoring_observability.rs  performance_optimization.rs
src/26_game_development/: audio_system.rs  ecs_architecture.rs  game_engine_basics.rs  game_logic.rs  game_networking.rs  graphics_rendering.rs  input_handling.rs  mod.rs  physics_engine.rs
src/27_mobile_development/: app_lifecycle.rs  cross_platform_frameworks.rs  data_storage.rs  device_integration.rs  mobile_ui_components.rs  mod.rs  native_bindings.rs  networking.rs  performance_mobile.rs
tests/: integration_test.rs
